# Node.js/openapi-generator/expressServer.js
@@ -12,7 +12,9 @@ const { OpenApiValidator } = require('express-openapi-validator');
 const logger = require('./logger');
 const config = require('./config');
 require('dotenv').config();
-const authMiddleware = require('./auth');
+const authOktaSilentMiddleware = require('./authOktaSilent');
+const { ExpressOIDC } = require('@okta/oidc-middleware');
+const session = require('express-session');
 
 class ExpressServer {
   constructor(port, openApiYaml) {
@@ -39,16 +41,47 @@ class ExpressServer {
     //Send the openapi document *AS GENERATED BY THE GENERATOR*
     this.app.get('/openapi', (req, res) => res.sendFile((path.join(__dirname, 'api', 'openapi.yaml'))));
     //View the openapi document in a visual interface. Should be able to test from this page
-    this.app.use('/api-doc', swaggerUI.serve, swaggerUI.setup(this.schema));
+    this.app.use('/api-doc', swaggerUI.serve, swaggerUI.setup(this.schema, false, {oauth2RedirectUrl:"http://localhost:3000/authorization-code/callback"}));
     this.app.get('/login-redirect', (req, res) => {
       res.status(200);
       res.json(req.query);
     });
-    this.app.get('/oauth2-redirect.html', (req, res) => {
+    /*this.app.get('/oauth2-redirect.html', (req, res) => {
       res.status(200);
       res.json(req.query);
-    });
-    this.app.use(authMiddleware);
+    });*/
+    if(process.env.KIND_OF_AUTHENTICATION === 'OktaSilent'){
+      this.app.use(authOktaSilentMiddleware);
+    }
+    else if(process.env.KIND_OF_AUTHENTICATION === 'OktaForm'){
+      const oidc = new ExpressOIDC(Object.assign({
+        issuer: process.env.ISSUER,
+        client_id: process.env.CLIENT_ID,
+        client_secret: process.env.CLIENT_SECRET,
+        appBaseUrl: process.env.APPBASEURL,
+        scope: process.env.AUTHCODE_FLOW_SCOPE,
+        testing: {
+            disableHttpsCheck: process.env.OKTA_TESTING_DISABLEHTTPSCHECK
+          }
+      }, {}));
+      this.app.use(session({
+        secret: 'this-should-be-very-random',
+        resave: true,
+        saveUninitialized: false
+      }));
+      this.app.use(oidc.router);
+      this.app.use(oidc.ensureAuthenticated());
+      this.app.get('/profile', (req, res) => {
+        // Convert the userinfo object into an attribute array, for rendering with mustache
+        const userinfo = req.userContext && req.userContext.userinfo;
+        const attributes = Object.entries(userinfo);
+        res.send({
+          isLoggedIn: !!userinfo,
+          userinfo: userinfo,
+          attributes
+        });
+      });
+    }
   }
 
   launch() {
